--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".login.LoginActivity">
+        tools:context=".login.LoginActivity"
+        android:background="@drawable/background"
+        >
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start"
@@ -23,30 +25,51 @@
             android:orientation="vertical"
             app:layout_constraintGuide_end="30dp" />
 
+        <ImageView
+            android:id="@+id/img_logo"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/logo"
+            android:layout_marginTop="25dp"
+            app:layout_constraintEnd_toEndOf="@id/guideline_end"
+            app:layout_constraintStart_toStartOf="@id/guideline_start"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
         <EditText
             android:id="@+id/login_email"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/edit_text"
             android:hint="@string/email"
+            android:drawableRight="@drawable/ic_email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/img_logo" />
 
         <EditText
             android:id="@+id/login_password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/senha"
-            android:inputType="textEmailAddress"
+            style="@style/edit_text"
+            android:layout_marginTop="15dp"
+            android:hint="@string/password"
+            android:drawableRight="@drawable/ic_eye"
+            android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
             app:layout_constraintTop_toBottomOf="@+id/login_email" />
 
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginStart="22dp"
+            android:layout_marginEnd="22dp"
+            android:backgroundTint="@color/purple"
+            android:textColor="@color/white"
+            android:shadowRadius="12"
+            android:textStyle="bold"
             android:text="@string/login_button_text"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
@@ -66,6 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
+            android:textColor="@color/white"
             android:text="@string/does_not_have_account"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
