--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,37 +38,6 @@
             app:layout_constraintTop_toTopOf="@+id/toolbar" />
 
 
-        <EditText
-            android:id="@+id/txt_name"
-            style="@style/edit_text"
-            android:hint="@string/password"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-        <EditText
-            android:id="@+id/txt_desc"
-            style="@style/edit_text"
-            android:hint="@string/password"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txt_name" />
-
-        <Button
-            android:id="@+id/btn_add"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="32dp"
-            android:backgroundTint="@color/purple_medium"
-            android:text="@string/common_signin_button_text_long"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_desc" />
-
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/home_rv"
             android:layout_width="match_parent"
@@ -78,7 +47,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_add"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
             tools:listitem="@layout/event_item" />
 
 
