--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_container_event"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@color/white"
         app:cardCornerRadius="5dp"
-        app:cardElevation="8dp"
-
-        >
+        app:cardElevation="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,10 +39,10 @@
                 android:id="@+id/item_event_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="start"
-                android:layout_marginStart="5dp"
                 android:maxLines="3"
                 android:text="@string/welcome_to_app"
                 android:textSize="12dp" />
