--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-
     <color name="purple">#682CAF</color>
     <color name="purple_medium">#8958C1</color>
     <color name="purple_light">#B69AD6</color>
+    <color name="black_translucent">#80000000</color>
 </resources>
