--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,7 @@
         tools:context=".splash.SplashActivity">
 
         <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/splash_list"
+            android:id="@+id/lottie_splash"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
