--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/home_logo"
+            android:id="@+id/iv_logo_home"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/logo"
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="@+id/toolbar" />
 
         <ImageView
-            android:id="@+id/home_shop_icon"
+            android:id="@+id/icon_shop_list"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="15dp"
@@ -39,7 +39,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/home_rv"
+            android:id="@+id/rv_home"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
