--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,13 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".login.LoginActivity"
-        android:background="@drawable/background"
-        >
+        android:background="@drawable/background">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start"
@@ -26,71 +23,66 @@
             app:layout_constraintGuide_end="30dp" />
 
         <ImageView
-            android:id="@+id/img_logo"
+            android:id="@+id/iv_logo_login"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:src="@drawable/logo"
             android:layout_marginTop="25dp"
+            android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-
-
         <EditText
-            android:id="@+id/login_email"
+            android:id="@+id/et_email_login"
             style="@style/edit_text"
-            android:hint="@string/email"
             android:drawableRight="@drawable/ic_email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/img_logo" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo_login" />
 
         <EditText
-            android:id="@+id/login_password"
+            android:id="@+id/et_password_login"
             style="@style/edit_text"
             android:layout_marginTop="15dp"
-            android:hint="@string/password"
             android:drawableRight="@drawable/ic_eye"
+            android:hint="@string/password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/login_email" />
+            app:layout_constraintTop_toBottomOf="@+id/et_email_login" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
-            android:layout_marginStart="22dp"
-            android:layout_marginEnd="22dp"
+            android:layout_height="60dp"
+            android:layout_marginVertical="26dp"
             android:backgroundTint="@color/purple"
-            android:textColor="@color/white"
-            android:shadowRadius="12"
-            android:textStyle="bold"
             android:text="@string/login_button_text"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/login_password" />
+            app:layout_constraintTop_toBottomOf="@+id/et_password_login"
+            app:layout_constraintVertical_bias="0.0" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="15dp"
             android:background="#EFEFEF"
-            app:layout_constraintBottom_toTopOf="@+id/txt_login"
+            app:layout_constraintBottom_toTopOf="@+id/tv_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/txt_login"
+            android:id="@+id/tv_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
-            android:textColor="@color/white"
             android:text="@string/does_not_have_account"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toStartOf="@id/guideline_start" />
