--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,14 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".register.RegisterActivity"
-        android:background="@drawable/background"
-        >
-
+        android:background="@drawable/background">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start"
@@ -27,78 +23,80 @@
             app:layout_constraintGuide_end="30dp" />
 
         <ImageView
-            android:id="@+id/img_logo"
+            android:id="@+id/iv_logo_register"
             android:layout_width="200dp"
             android:layout_height="150dp"
-            android:src="@drawable/logo"
             android:layout_marginTop="25dp"
+            android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <EditText
-            android:id="@+id/user_name"
+            android:id="@+id/et_name_register"
             style="@style/edit_text"
-            android:hint="@string/register_name"
             android:layout_marginTop="25dp"
+            android:hint="@string/register_name"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/img_logo" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo_register" />
 
         <EditText
-            android:id="@+id/register_email"
+            android:id="@+id/et_email_register"
             style="@style/edit_text"
             android:layout_marginTop="15dp"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/user_name" />
+            app:layout_constraintTop_toBottomOf="@+id/et_name_register" />
 
         <EditText
-            android:id="@+id/register_password"
+            android:id="@+id/et_password_register"
             style="@style/edit_text"
             android:layout_marginTop="15dp"
             android:hint="@string/password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/register_email" />
+            app:layout_constraintTop_toBottomOf="@+id/et_email_register" />
 
         <EditText
-            android:id="@+id/register_confirm_password"
+            android:id="@+id/et_confirm_password_register"
             style="@style/edit_text"
             android:layout_marginTop="15dp"
             android:hint="@string/confirm_password_register"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/register_password" />
+            app:layout_constraintTop_toBottomOf="@+id/et_password_register" />
 
         <Button
             android:id="@+id/btn_register"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="22dp"
+            android:layout_height="60dp"
+            android:layout_marginVertical="26dp"
+            android:backgroundTint="@color/purple"
             android:text="@string/register"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/register_confirm_password" />
+            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password_register"
+            app:layout_constraintVertical_bias="0.0" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="15dp"
             android:background="#EFEFEF"
-            app:layout_constraintBottom_toTopOf="@+id/txt_register"
+            app:layout_constraintBottom_toTopOf="@+id/tv_register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
-            android:id="@+id/txt_register"
+            android:id="@+id/tv_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
