--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -5,7 +5,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_container_event"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@color/white"
@@ -18,14 +18,14 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/item_event_img"
+                android:id="@+id/iv_event"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:scaleType="fitXY"
                 tools:src="@tools:sample/backgrounds/scenic" />
 
             <TextView
-                android:id="@+id/item_event_name"
+                android:id="@+id/tv_name_event"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -36,7 +36,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/item_event_desc"
+                android:id="@+id/tv_desc_event"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -44,11 +44,9 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="start"
                 android:maxLines="3"
-                android:text="@string/welcome_to_app"
+                android:text="@string/register_description_event"
                 android:textSize="12dp" />
 
         </LinearLayout>
-
-
     </androidx.cardview.widget.CardView>
 </layout>
