--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -32,7 +32,7 @@
                 android:gravity="center"
                 android:text="Event name"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -44,8 +44,9 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="start"
                 android:maxLines="3"
+                android:ellipsize="end"
                 android:text="@string/register_description_event"
-                android:textSize="12dp" />
+                android:textSize="12sp" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
