--- a/app/src/main/res/layout/activity_register_event.xml
+++ b/app/src/main/res/layout/activity_register_event.xml
@@ -27,6 +27,16 @@
                 app:layout_constraintGuide_end="30dp" />
 
             <ImageView
+                android:id="@+id/btn_back_home"
+                android:layout_width="32dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/ic_arrow_back"
+                app:layout_constraintStart_toStartOf="parent"
+                />
+
+            <ImageView
                 android:id="@+id/iv_register_event"
                 android:layout_width="0dp"
                 android:layout_height="300dp"
@@ -34,7 +44,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:background="@drawable/event_test_img" />
+                android:src="@drawable/img_default" />
 
             <TextView
                 android:id="@+id/tv_register_img"
