--- a/app/src/main/res/layout/dialog_buy_ticket.xml
+++ b/app/src/main/res/layout/dialog_buy_ticket.xml
@@ -8,6 +8,16 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/btn_close_ticket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="6dp"
+            android:src="@drawable/ic_close"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
             android:id="@+id/iv_event_ticket"
             android:layout_width="0dp"
             android:layout_height="260dp"
@@ -59,9 +69,10 @@
 
         <TextView
             android:id="@+id/tv_remove_ticket"
-            android:layout_width="wrap_content"
+            android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:gravity="center"
             android:text="@string/remove_ticket"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="20dp"
@@ -85,12 +96,13 @@
 
         <TextView
             android:id="@+id/tv_add_ticket"
-            android:layout_width="wrap_content"
+            android:layout_width="36sp"
             android:layout_height="wrap_content"
-            android:text="@string/add_ticket"
             android:layout_marginStart="5dp"
+            android:gravity="center"
+            android:text="@string/add_ticket"
             android:textColor="@android:color/holo_green_light"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv_quantity_ticket"
             app:layout_constraintStart_toEndOf="@+id/tv_quantity_ticket"
@@ -124,6 +136,7 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_margin="32dp"
+            android:layout_marginTop="40dp"
             android:backgroundTint="@color/purple"
             android:text="@string/btn_buy_ticket"
             android:textColor="@color/white"
