--- a/app/src/main/res/layout/activity_register_event.xml
+++ b/app/src/main/res/layout/activity_register_event.xml
@@ -31,20 +31,19 @@
                 android:layout_width="32dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="6dp"
-                app:layout_constraintTop_toTopOf="parent"
                 android:src="@drawable/ic_arrow_back"
                 app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/iv_register_event"
                 android:layout_width="0dp"
                 android:layout_height="300dp"
+                android:src="@drawable/img_default"
                 app:layout_constraintBottom_toTopOf="@id/tv_register_img"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/img_default" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_register_img"
