--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,12 +35,13 @@
             android:id="@+id/btn_register_event_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_arrow_go"
-            android:elevation="4dp"
+            android:layout_marginTop="6dp"
+            android:elevation="1dp"
             android:padding="12dp"
             android:text="@string/btn_register_event_home"
             android:textColor="@color/black"
             android:textStyle="bold"
+            app:drawableEndCompat="@drawable/ic_arrow_go"
             app:layout_constraintBottom_toBottomOf="@+id/iv_logo_home"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/iv_logo_home" />
@@ -68,8 +69,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
