Register event layout

--- a/app/src/main/res/layout/dialog_buy_ticket.xml
+++ b/app/src/main/res/layout/dialog_buy_ticket.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -144,6 +145,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_price_event_ticket" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_buy_ticket"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black_translucent"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/ticket" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
