--- a/app/src/main/res/layout/activity_register_event.xml
+++ b/app/src/main/res/layout/activity_register_event.xml
@@ -30,7 +30,8 @@
                 android:id="@+id/btn_back_home"
                 android:layout_width="32dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="6dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
                 android:src="@drawable/ic_arrow_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
