correção de bugs

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="purple_medium">#8958C1</color>
     <color name="purple_light">#B69AD6</color>
     <color name="black_translucent">#80000000</color>
+    <color name="ice_white">#F8F8FF</color>
 </resources>
