--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:id="@+id/iv_logo_login"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="36dp"
             android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
@@ -45,7 +45,7 @@
             android:id="@+id/et_password_login"
             style="@style/edit_text"
             android:layout_marginTop="15dp"
-            android:drawableEnd="@drawable/ic_eye"
+            android:drawableRight="@drawable/ic_eye"
             android:hint="@string/password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
@@ -92,10 +92,12 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:elevation="3dp"
+            tools:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@id/btn_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/iv_logo_login"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
