--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,16 +8,6 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/btn_back_home"
-            android:layout_width="32dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ic_arrow_back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
             android:id="@+id/imgPerfil"
             android:layout_width="150dp"
             android:layout_height="150dp"
@@ -56,7 +46,7 @@
             tools:itemCount="3"
             tools:listitem="@layout/event_item_profile"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/footer_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvEventosComprados" />
@@ -67,10 +57,18 @@
             android:layout_height="0dp"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/tvEventosComprados"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/footer_bar"
             app:layout_constraintStart_toStartOf="parent"
             android:src="@drawable/img_default"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.marcelodonato.desafiomblabs.presentation.uikit.AppFooterBar
+            android:id="@+id/footer_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <ProgressBar
             android:id="@+id/progress_home"
